--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ before_install:
 install:
 - npm install
 
+before_script:
+  - sleep 15
+  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
+
 script:
 - npm test
 
