--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "supertest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +15,11 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.4.1",
     "google-auth-library": "^6.1.3",
-    "jest": "^26.6.1",
     "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "supertest": "^6.0.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
