--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "backend",
+  "name": "GoalStarter",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
+    "preset": "@shelf/jest-mongodb",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "^9.4.1",
-    "google-auth-library": "^6.1.3",
+    "firebase-admin": "^9.3.0",
+    "google-auth-library": "^6.1.2",
+    "jest": "^26.6.3",
+    "mongo": "^0.1.0",
     "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "supertest": "^6.0.1"
-  },
-  "devDependencies": {
-    "jest": "^26.6.3"
   }
 }
