--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,11 @@ node_modules/.bin/mime
 node_modules/.bin/compileProtos
 *.ps1
 node_modules
+*.info
 *.html
+coverage/lcov-report/sorter.js
+*.xml
+*.css
+*.png
+*.js
+*.json
